--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html> 
 <html>
     <head>
         <title>My Cat Page</title>
@@ -10,7 +11,8 @@
         </ol>
 
         <p>this is a "paragraph" tag</p>
-
+        <p>Lorem ipsum dolor sit <blockquote>"I don't know any quotes"</blockquote> consectetur adipisicing elit. <span>Ad voluptates repudiandae asperiores nulla,</span> consequuntur <img src="https://placekitten.com/200/300" alt="this is a picture of a cat..."> velit reprehenderit debitis facere ducimus minus itaque nobis aliquid dignissimos reiciendis unde, harum, magni quaerat quo.</p>
+        
         <br>
         <hr>
 
