update with tables

--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
         <img src="https://placekitten.com/200/300" alt="this is a picture of a cat...">
         <b>whatever and stuff</b>
 
+        <table>
+            <tr>
+                <td>item</td>
+            </tr>
+            <tr>
+                <td>item</td>
+                <td>item</td>
+            </tr>
+            <tr>
+                <td>item</td>
+            </tr>
+            <tr>
+                <td>item</td>
+            </tr>
+        </table>
     </body>
 </html>
