update with tables

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
         <p>this is a "paragraph" tag</p>
         <p>Lorem ipsum dolor sit <blockquote>"I don't know any quotes"</blockquote> consectetur adipisicing elit. <span>Ad voluptates repudiandae asperiores nulla,</span> consequuntur <img src="https://placekitten.com/200/300" alt="this is a picture of a cat..."> velit reprehenderit debitis facere ducimus minus itaque nobis aliquid dignissimos reiciendis unde, harum, magni quaerat quo.</p>
-        
+        <h1>My favorite things</h1>
+        <ul>
+            <li>Camping</li>
+            <li>Running</li>
+            <li>Geeky Things</li>
+            <li>Avoiding bad smells</li>
+        </ul>
         <br>
         <hr>
 
@@ -25,7 +31,7 @@
             </tr>
             <tr>
                 <td>item</td>
-                <td>item</td>
+                <td>item in col 2</td>
             </tr>
             <tr>
                 <td>item</td>
