update with favorites

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>Camping</li>
             <li>Running</li>
             <li>Geeky Things</li>
-            <li>Avoiding bad smells</li>
+            <li>Avoiding terrible decisions</li>
         </ul>
         <br>
         <hr>
