update with favorites2

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
         <table>
             <tr>
-                <td>item</td>
+                <td>Favorite Things</td>
             </tr>
             <tr>
-                <td>item</td>
-                <td>item in col 2</td>
+                <td>Camping</td>
+                
             </tr>
             <tr>
-                <td>item</td>
+                <td>Avoiding Terrible Decisions</td>
             </tr>
             <tr>
-                <td>item</td>
+                <td>Geeky Things</td>
             </tr>
         </table>
     </body>
